--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">Sia</string>
+    <string name="app_name">Nagwa</string>
+
+    <string name="download">Download</string>
+    <string name="see">See</string>
+    <string name="see_video">See video</string>
+    <string name="read_pdf">Read PDF</string>
 </resources>
